Got Visual C++ installed correctly, sep installed

--- a/SEP Tutorial Notebook.ipynb
+++ b/SEP Tutorial Notebook.ipynb
@@ -1,12 +1,24 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "7e6ca54f",
+   "metadata": {},
+   "source": [
+    "# Tutorial completion Notebook"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1d45a96a",
+   "id": "62bc8c28",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#required imports\n",
+    "import numpy as np, matplotlib.pyplot as plt\n",
+    "import sep, astropy.io.fits as fits"
+   ]
   }
  ],
  "metadata": {
