started on f105 processing, using subdirectories now
plots and images in ./output, data in ./data

--- a/SEP Tutorial Notebook.ipynb
+++ b/SEP Tutorial Notebook.ipynb
@@ -26,13 +26,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9c173f12",
+   "id": "7a9b11ef",
    "metadata": {},
    "outputs": [],
    "source": [
     "#import fits formatted data to array\n",
-    "rawData = fits.open(\"./galaxies.fits\")\n",
-    "data = fits.getdata(\"./galaxies.fits\")\n",
+    "#note that the fits data in use came from here: https://github.com/astromatic/sextractor/blob/master/tests/galaxies.fits\n",
+    "#it does not appear to match the data from the tutorial, but was the fits data I could find in the SEP github\n",
+    "data = fits.getdata(\"./data/galaxies.fits\")\n",
     "\n",
     "#display image with matplotlib\n",
     "mean, std = np.mean(data), np.std(data)\n",
@@ -43,7 +44,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d4792680",
+   "id": "6a1e8f00",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,7 +67,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "98eb6bb7",
+   "id": "063de73d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,7 +87,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6a169159",
+   "id": "5d3e8f80",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -115,13 +116,13 @@
     "    ax.add_artist(e)\n",
     "    \n",
     "fig.set_facecolor(\"white\")\n",
-    "fig.savefig(\"test identification.png\", bbox_inches = \"tight\", dpi = 300)"
+    "fig.savefig(\"./output/tutorial identification.png\", bbox_inches = \"tight\", dpi = 300)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c99c17b4",
+   "id": "fe261678",
    "metadata": {},
    "outputs": [],
    "source": [
