Re-added the alpha changes to accurately reflect what produced the failed false-color image

--- a/EWERS_ASTR 19_Final.ipynb
+++ b/EWERS_ASTR 19_Final.ipynb
@@ -138,7 +138,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "322b67e1",
+   "id": "7cf119d3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -184,7 +184,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6024d019",
+   "id": "c144db93",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -211,7 +211,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f4091482",
+   "id": "24ada0b1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -227,7 +227,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6aa785f6",
+   "id": "3127697c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -238,19 +238,19 @@
     "f160sub_mean, f160sub_std = np.mean(f160data_sub), np.std(f160data_sub)\n",
     "\n",
     "im = ax.imshow(f160data_sub, interpolation = 'nearest', cmap = 'Reds',\n",
-    "               vmin = f160sub_mean - f160sub_std, vmax = f160sub_mean + f160sub_std, origin='lower')\n",
+    "               vmin = f160sub_mean - f160sub_std, vmax = f160sub_mean + f160sub_std, origin='lower', alpha = 0.3)\n",
     "\n",
     "#f125 on green channel\n",
     "f125sub_mean, f125sub_std = np.mean(f125data_sub), np.std(f125data_sub)\n",
     "\n",
     "im = ax.imshow(f125data_sub, interpolation = 'nearest', cmap = 'Greens',\n",
-    "               vmin = f125sub_mean - f125sub_std, vmax = f125sub_mean + f125sub_std, origin='lower')\n",
+    "               vmin = f125sub_mean - f125sub_std, vmax = f125sub_mean + f125sub_std, origin='lower', alpha = 0.3)\n",
     "\n",
     "#f105 on blue channel\n",
     "f105sub_mean, f105sub_std = np.mean(f105data_sub), np.std(f105data_sub)\n",
     "\n",
     "im = ax.imshow(f105data_sub, interpolation = 'nearest', cmap = 'Blues',\n",
-    "               vmin = f105sub_mean - f105sub_std, vmax = f105sub_mean + f105sub_std, origin='lower')\n",
+    "               vmin = f105sub_mean - f105sub_std, vmax = f105sub_mean + f105sub_std, origin='lower', alpha = 0.3)\n",
     "\n",
     "#save image with false color\n",
     "f.set_facecolor(\"white\")\n",
