Implemented passing data as rgb channels
I intend to come back and rescale further so that you can see more of the smaller sources.

--- a/EWERS_ASTR 19_Final.ipynb
+++ b/EWERS_ASTR 19_Final.ipynb
@@ -221,7 +221,45 @@
     "append them to an array of the form: \"(M, N, 3): an image with RGB values (0-1 float or 0-255 int).\"\n",
     "where M is the x-value, and each of the 3 Ns correspond to R, G, B\n",
     "then pass result to .imshow\n",
-    "'''"
+    "'''\n",
+    "\n",
+    "\n",
+    "\n",
+    "print(f160data_sub.max())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bdd918cb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#process the data into the three channels\n",
+    "#create an empty array of the correct format\n",
+    "rgb_image = np.zeros((3600, 3600, 3))\n",
+    "\n",
+    "#rescale the data to prevent clipping\n",
+    "f160data_scaled = np.log10(f160data_sub) / np.log10(f160data_sub.max())\n",
+    "f125data_scaled = np.log10(f125data_sub) / np.log10(f125data_sub.max())\n",
+    "f105data_scaled = np.log10(f105data_sub) / np.log10(f105data_sub.max())\n",
+    "\n",
+    "#insert the data into the formatted array on each channel\n",
+    "rgb_image[:,:,0] = f160data_sub\n",
+    "rgb_image[:,:,1] = f125data_sub\n",
+    "rgb_image[:,:,2] = f105data_sub"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "eb3dc8e8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(f160data_scaled.max())\n",
+    "print(f125data_scaled.max())\n",
+    "print(f105data_scaled.max())"
    ]
   },
   {
@@ -234,28 +272,20 @@
     "#plot the image on the different channels\n",
     "f, ax = plt.subplots()\n",
     "\n",
-    "#f160 on red channel\n",
-    "f160sub_mean, f160sub_std = np.mean(f160data_sub), np.std(f160data_sub)\n",
-    "\n",
-    "im = ax.imshow(f160data_sub, interpolation = 'nearest', cmap = 'Reds',\n",
-    "               vmin = f160sub_mean - f160sub_std, vmax = f160sub_mean + f160sub_std, origin='lower', alpha = 0.3)\n",
-    "\n",
-    "#f125 on green channel\n",
-    "f125sub_mean, f125sub_std = np.mean(f125data_sub), np.std(f125data_sub)\n",
-    "\n",
-    "im = ax.imshow(f125data_sub, interpolation = 'nearest', cmap = 'Greens',\n",
-    "               vmin = f125sub_mean - f125sub_std, vmax = f125sub_mean + f125sub_std, origin='lower', alpha = 0.3)\n",
-    "\n",
-    "#f105 on blue channel\n",
-    "f105sub_mean, f105sub_std = np.mean(f105data_sub), np.std(f105data_sub)\n",
-    "\n",
-    "im = ax.imshow(f105data_sub, interpolation = 'nearest', cmap = 'Blues',\n",
-    "               vmin = f105sub_mean - f105sub_std, vmax = f105sub_mean + f105sub_std, origin='lower', alpha = 0.3)\n",
+    "ax.imshow(rgb_image)\n",
     "\n",
     "#save image with false color\n",
     "f.set_facecolor(\"white\")\n",
-    "f.savefig(\"./output/composite false color.png\", bbox_inches = \"tight\", dpi = 300)"
+    "f.savefig(\"./output/composite false color.png\", bbox_inches = \"tight\", dpi = 600)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8024f1f3",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
